--- a/syntocenter/src/main/resource/config/services.properties
+++ b/syntocenter/src/main/resource/config/services.properties
@@ -112,6 +112,8 @@ resource.services.sys.synsys=/sys/synsys
 #同步字典
 resource.services.sys.dict=/sys/getdicbyversion
 
+resource.services.sys.getUntranCubgeInfos=/sys/getUntranCubgeInfos
+
 
 
 
