--- a/center/src/main/resources/conf/hnservices.properties
+++ b/center/src/main/resources/conf/hnservices.properties
@@ -1,58 +1,60 @@
-#ÅäÖÃºşÄÏ½Ó¿ÚµØÖ·
+#ï¿½ï¿½ï¿½Ãºï¿½ï¿½Ï½Ó¿Úµï¿½Ö·
 resources.hn.abc.abc=/abc/abc
-#ÈÕ½áËğÒæÔ¤¾¯±í
+#ï¿½Õ½ï¿½ï¿½ï¿½ï¿½ï¿½Ô¤ï¿½ï¿½ï¿½ï¿½
 resource.hn.Alarm.PassDailyLost=/Alarm/PassDailyLost
-#½»½Ó°àËğÒæÔ¤¾¯±í
+#ï¿½ï¿½ï¿½Ó°ï¿½ï¿½ï¿½ï¿½ï¿½Ô¤ï¿½ï¿½ï¿½ï¿½
 resource.hn.Alarm.PassShiftLost=/Alarm/PassShiftLost
-#¿â´æÔ¤¾¯
+#ï¿½ï¿½ï¿½Ô¤ï¿½ï¿½
 resource.hn.Alarm.PassInventory=/alarm/stockAlarm.do
-#Ç¹³ö¹Ş³ö¶Ô±È
+#Ç¹ï¿½ï¿½ï¿½Ş³ï¿½ï¿½Ô±ï¿½
 resource.hn.Alarm.PassGaTContrast=/oilcanOutInfo/insertOilcanOutInfo.do
-#²àÂ©±í
+#ï¿½ï¿½Â©ï¿½ï¿½
 resource.hn.Alarm.PassMeasureLeak=/stock/staticStock.do
-#ÍÑÏúÔ¤¾¯
+#ï¿½ï¿½ï¿½ï¿½Ô¤ï¿½ï¿½
 resource.hn.Alarm.PassSaleOut=/Alarm/PassSaleOut.do
-#Éè±¸¹ÊÕÏ
+#ï¿½è±¸ï¿½ï¿½ï¿½ï¿½
 resource.hn.Alarm.PassEquipment=/alarm/deviceAlarm.do
-#½øÓÍËğºÄ
+#ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 resource.hn.Alarm.PassOilInContrast=/Alarm/PassOilInContrast
-#Õûµã¿â´æ
+#ï¿½ï¿½ï¿½ï¿½ï¿½
 resource.hn.TI.DeliveryInventory=/stockData/insertStockData.do
-#Ê±µã¿â´æ
+#Ê±ï¿½ï¿½ï¿½ï¿½
 resource.hn.TI.PassTimeInventory=/stockData/insertStockHoutData.do
-#°à½áÊı¾İ
+#ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 resources.hn.RCYX.BJSJ=/bj/bjsj.do
-#ÈÕÆ½ºâÊı¾İ
+#ï¿½ï¿½Æ½ï¿½ï¿½ï¿½ï¿½ï¿½
 resources.hn.RCYX.DailyBalance=/stock/dailyBalance.do
-#ÓÍÇ¹ÏúÊÛ¿â´æÊı¾İ(½»Ò×¼ÓÓÍÁ÷Ë®±í)
+#ï¿½ï¿½Ç¹ï¿½ï¿½ï¿½Û¿ï¿½ï¿½ï¿½ï¿½ï¿½(ï¿½ï¿½ï¿½×¼ï¿½ï¿½ï¿½ï¿½ï¿½Ë®ï¿½ï¿½)
 resources.hn.TradeAccount.TradeAccount=/TradeAccount/TradeAccount.do
 
-#ºşÄÏ¾²Ì¬¹à´æ
+#ï¿½ï¿½ï¿½Ï¾ï¿½Ì¬ï¿½ï¿½ï¿½
 resources.hn.Alarm.jtgc=/stock/staticStock.do
 
-#ºşÄÏ³ö¿âµ¥½Ó¿Ú
+#ï¿½ï¿½ï¿½Ï³ï¿½ï¿½âµ¥ï¿½Ó¿ï¿½
 resources.hn.accept.getbillbyno=/ckd/getCkd.do
 
-#ºşÄÏÓÍÇ¹ĞÅÏ¢½Ó¿Ú
+#ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ç¹ï¿½ï¿½Ï¢ï¿½Ó¿ï¿½
 resources.hn.system.sendoilgun=/gunBasics/insertGunBasics.do
 
-#ºşÄÏ½ÓÊÕĞ¶ÓÍÊı¾İ½Ó¿Ú
+#ï¿½ï¿½ï¿½Ï½ï¿½ï¿½ï¿½Ğ¶ï¿½ï¿½ï¿½ï¿½İ½Ó¿ï¿½
 resources.hn.accept.sendodreg=/bfJyys/insertBfJyys.do
 
-#ºşÄÏ½ÓÊÕ½ø»õÑéÊÕ×´Ì¬½Ó¿Ú
+#ï¿½ï¿½ï¿½Ï½ï¿½ï¿½Õ½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½×´Ì¬ï¿½Ó¿ï¿½
 resources.hn.accept.transtatus=/bfJyysStatus/insertBfJyysStatus.do
 
-#ºşÄÏÈİ»ı±í»ñÈ¡
+#ï¿½ï¿½ï¿½ï¿½ï¿½İ»ï¿½ï¿½ï¿½È¡
 resources.hn.system.getcube=/rjb1/stationRegister.do
 
 resource.hn.Alarm.PassHn_Gun=/Alarm/PassHn_Gun
 
-#ºşÄÏÓÍ¹ŞĞÅÏ¢½Ó¿Ú
+#ï¿½ï¿½ï¿½ï¿½ï¿½Í¹ï¿½ï¿½ï¿½Ï¢ï¿½Ó¿ï¿½
 resources.hn.system.sendtank=/oilcanBasics/insertOilcanBasics.do
 
-#·¢ËÍÓÍÆ·ÀàĞÍµ½ºşÄÏ
+#ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Æ·ï¿½ï¿½ï¿½Íµï¿½ï¿½ï¿½ï¿½ï¿½
 resources.hn.system.sendoiltype=/oilBasics/insertOilBasics.do
 
-#ÓÍÇ¹ÏúÊÛ¿â´æ
+#ï¿½ï¿½Ç¹ï¿½ï¿½ï¿½Û¿ï¿½ï¿½
 resources.hn.RCYX.TradeInventory=/sale/getSale.do
+
+resources.hn.accept.getsjfyl=/ckd/getSfData.do
 
