--- a/syntocenter/src/main/resource/config/system.properties
+++ b/syntocenter/src/main/resource/config/system.properties
@@ -1,10 +1,10 @@
 #存储一些系统的配置参数
 
-resource.domain.address =10.190.1.206:8080
+resource.domain.address =localhost:8080
 
 resource.ctrl.address=127.0.0.1
 resource.ctrl.port=8992
-resource.ftp.address=10.190.1.206
+resource.ftp.address=192.168.0.118
 resource.ftp.username=gsmc
 resource.ftp.password=gsmc
 resource.ftp.localpath=/smc20/gsm/logs/gsmtimestock/
