--- a/syntocenter/src/main/resource/log4j.properties
+++ b/syntocenter/src/main/resource/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=error,stdout,file
+log4j.rootLogger=info,stdout,file
 
 # Console output...
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
