--- a/app/pom.xml
+++ b/app/pom.xml
@@ -165,10 +165,10 @@
                 <directory>src/main/resources</directory>
                 <targetPath>${project.build.directory}/app</targetPath>
             </resource>
-          <!--   <resource>
+             <resource>
                  <directory>src/main/resources</directory>
                  <targetPath>${project.build.directory}/classes</targetPath>
-             </resource>-->
+             </resource>
             <resource>
                 <directory>../core/src/main/resources</directory>
                 <targetPath>${project.build.directory}/app</targetPath>
