--- a/syntocenter/src/main/resource/config/system.properties
+++ b/syntocenter/src/main/resource/config/system.properties
@@ -1,8 +1,8 @@
 #存储一些系统的配置参数
 
-resource.domain.address =localhost:8080
+resource.domain.address =192.168.0.118:8080
 
-resource.ctrl.address=127.0.0.1
+resource.ctrl.address=192.168.0.213
 resource.ctrl.port=8992
 resource.ftp.address=192.168.0.118
 resource.ftp.username=gsmc
