--- a/ctrl/src/main/resources/config/services.properties
+++ b/ctrl/src/main/resources/config/services.properties
@@ -90,6 +90,12 @@ resource.services.accept.transtatus=/accept/transtatus
 #管枪实时状态
 resource.services.TI.addsszt=/TI/addsszt
 
+#枪实时状态
+resource.services.TI.addQSSZT=/TI/addqsszt2
+
+#灌实时状态
+resource.services.TI.addGSSZT=/TI/addgsszt2
+
 
 #同步卸油数据
 resource.services.accept.addOdReg=/accept/addOdReg
