站级交易库存表同步到中心时，新增接口，关联自用油卡表，通过配置文件来控制

--- a/center/src/main/resources/conf/system.properties
+++ b/center/src/main/resources/conf/system.properties
@@ -8,6 +8,9 @@ resource.hn.address=10.190.1.165:8080
 #转发湖南开关
 resource.hu.OpenTrans=0
 
+#上传加油卡卡号开关
+resource.js.OpenTrans=0
+
 #湖南ftp
 resourse.hnftp.addr=192.168.0.232
 resourse.hnftp.username=ny
