班结时更新交易库存表的班次，新增接口上传更新文件库存表班次字段，更改传完的的状态为2,

--- a/syntocenter/src/main/resource/config/services.properties
+++ b/syntocenter/src/main/resource/config/services.properties
@@ -9,6 +9,8 @@ resource.services.RCYX.AddopotCount=/RCYX/AddopotCount
 resource.services.RCYX.AddTradeAccount=/RCYX/AddTradeAccount
 #添加交易库存表
 resource.services.RCYX.AddTradeInventory=/RCYX/AddTradeInventory
+#更新交易库存表
+resource.services.RCYX.UpdateTradeInventory=/RCYX/UpdateTradeInventory
 #添加付油数量统计交接表
 resource.services.RCYX.AddopoCount=/RCYX/AddopoCount
 #添加付油量分类日结表
