--- a/center/pom.xml
+++ b/center/pom.xml
@@ -47,23 +47,23 @@
         <finalName>center</finalName>
         <pluginManagement>
             <plugins>
-               <!-- <plugin>
+                <plugin>
                     <groupId>org.mortbay.jetty</groupId>
                     <artifactId>maven-jetty-plugin</artifactId>
                     <version>6.1.22</version>
                     <configuration>
                         <connectors>
                             <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-                                &lt;!&ndash; 更改jetty的访问端口 &ndash;&gt;
+                                <!-- 更改jetty的访问端口 -->
                                 <port>8883</port>
                             </connector>
                         </connectors>
                         <stopPort>6888</stopPort>
                         <stopKey>foo</stopKey>
-                        &lt;!&ndash; 部署在jetty容器中的应用名 &ndash;&gt;
+                        <!-- 部署在jetty容器中的应用名 -->
                         <contextPath>/</contextPath>
                     </configuration>
-                </plugin>-->
+                </plugin>
                 <plugin>
                     <groupId>org.apache.tomcat.maven</groupId>
                     <artifactId>tomcat7-maven-plugin</artifactId>
