修改，新增十分钟长传，增加转发湖南接口

--- a/center/src/main/resources/conf/hnservices.properties
+++ b/center/src/main/resources/conf/hnservices.properties
@@ -55,6 +55,13 @@ resources.hn.system.sendoiltype=/oilBasics/insertOilBasics.do
 
 #油枪销售库存
 resources.hn.RCYX.TradeInventory=/sale/getSale.do
+
+#油枪销售库存(增加自用油卡卡号)
+resources.hn.RCYX.TradeInventory1=/sale/getSaleOnCard.do
+
+#油枪销售库存更新
+resources.hn.RCYX.TradeUpdateInventory=/sale/UpdateSaleShift.do
+
 #油库实发温度
 resources.hn.accept.getsjfyl=/ckd/getSfData.do
 
