--- a/center/src/main/resources/conf/important.properties
+++ b/center/src/main/resources/conf/important.properties
@@ -5,12 +5,12 @@
 #数据库配置
 db.driver.gsmcenter=com.mysql.jdbc.Driver
 
-db.url.gsmcenter=jdbc:mysql://svn.nsenz.com:3306/gsmcenter
+#db.url.gsmcenter=jdbc:mysql://svn.nsenz.com:3306/gsmcenter
 #db.url.gsmcenter=jdbc:mysql://192.168.0.118:8999/gsmcenter?useUnicode=true&characterEncoding=UTF-8
 #db.url.gsmcenter=jdbc:mysql://svn.nsenz.com:3306/gsmcenter
 #db.url.gsmcenter=jdbc:mysql://192.168.0.95:8999/gsmcenter?useUnicode=true&characterEncoding=UTF-8
-#db.url.gsmcenter=jdbc:mysql://10.190.1.208:8999/gsmcenter?useUnicode=true&characterEncoding=UTF-8
+db.url.gsmcenter=jdbc:mysql://10.238.29.146:8999/gsmcenter?useUnicode=true&characterEncoding=UTF-8
 
-db.username.gsmcenter=gsm
-#db.username.gsmcenter=root
+#db.username.gsmcenter=gsm
+db.username.gsmcenter=root
 db.password.gsmcenter=gsmdb112
