与湖南联调之后修正

--- a/app/src/main/resources/config/important.properties
+++ b/app/src/main/resources/config/important.properties
@@ -2,9 +2,9 @@
 db.driver.app=com.mysql.jdbc.Driver
 
 
-db.url.app=jdbc:mysql://10.238.29.176:8999/gsmapp?useUnicode=true&characterEncoding=UTF-8
+db.url.app=jdbc:mysql://182.92.165.239:3306/gsmapp?useUnicode=true&characterEncoding=UTF-8
 
-db.username.app=root
+db.username.app=gsm
 db.password.app=gsmdb112
 
 ctrl.ip=10.238.29.176
