--- a/app/src/main/resources/config/important.properties
+++ b/app/src/main/resources/config/important.properties
@@ -2,12 +2,12 @@
 db.driver.app=com.mysql.jdbc.Driver
 
 
-db.url.app=jdbc:mysql://182.92.165.239:3306/gsmapp?useUnicode=true&characterEncoding=UTF-8
+db.url.app=jdbc:mysql://10.190.16.19:8999/gsmapp?useUnicode=true&characterEncoding=UTF-8
 
-db.username.app=gsm
+db.username.app=root
 db.password.app=gsmdb112
 
-ctrl.ip=10.238.29.176
+ctrl.ip=10.190.16.19
 ctrl.port=8992
 ctrl.timeout=30
-center.address=10.238.29.147:8080
+center.address=10.190.1.206:8080
